fix overflow on Lexicon page

--- a/src/pages/Lexicon/Lexicon.less
+++ b/src/pages/Lexicon/Lexicon.less
@@ -15,6 +15,8 @@
   // small screens
   @media (max-width: @breakpoint-wide) {
 
+    overflow: hidden;
+
     .lexeme-editor {
       background-color: white;
       inset-block     : 0;
